--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hola</title>
+        <title>Hola JAJAJA</title>
     </head>
     <body>
         <p>Hola como estas</p>
